Added the sidemenu and changed the colors.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,12 @@
 <ion-header>
-    <ion-navbar>
-        <ion-title>home</ion-title>
+    <ion-navbar color="primary">
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>Switch</ion-title>
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
 
 </ion-content>
