The plugin is working but it only has the GET functionality. It has been updated with a SET method as well, but this needs to be tested (on this commit).

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,9 @@
 </ion-header>
 
 <ion-content>
+    <p ion-text>{{ data }}</p>
 
+    <button ion-button color="primary" (click)="setRingerMode(0)">Silent</button>
+    <button ion-button color="primary" (click)="setRingerMode(1)">Vibrate</button>
+    <button ion-button color="primary" (click)="setRingerMode(2)">Normal</button>
 </ion-content>
