After fixing the Cordova plugin, everything seems to be working fine. Removed some of the unnecessary code. Update the version of the plugin in various places and updated the README.md file.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,6 +9,7 @@
 
 <ion-content>
 
+    <p ion-text>{{ action }}</p>
     <p ion-text>{{ data }}</p>
     <p ion-text>{{ hasS + '' }}</p>
     <p ion-text>{{ hasV + '' }}</p>
