--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -31,6 +31,12 @@
                     <ion-option *ngFor="let mode of modes" [value]="mode">{{ mode | swCapitalize }}</ion-option>
                 </ion-select>
             </ion-item>
+            <ion-item>
+                <ion-label>Moving mode:</ion-label>
+                <ion-select [formControlName]="'movingMode'">
+                    <ion-option *ngFor="let mode of modes" [value]="mode">{{ mode | swCapitalize }}</ion-option>
+                </ion-select>
+            </ion-item>
             <!--Removed because there is no support for this yet.-->
             <!--<ion-item>-->
                 <!--<ion-label>Stay silent while screen is on?</ion-label>-->
